Prepare for Java SE 9 deprecations